# MMAFightPredictor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: backtest_ev.py  backtest_sweep.py  evaluate_all.py  export_cv_predictions.py  make_clean.py  make_features.py  make_splits.py  predict_cli.py  train_market.py  train_profit_selector.py  train_sideband_calibrators.py  train_skill.py
src/ufcml/: __init__.py  api.py  calibrate.py  calibration.py  clean.py  config.py  elo.py  evaluate.py  features.py  io.py  predict.py  split.py  train.py  utils.py
tests/: test_clean.py  test_features.py  test_split.py
