[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ufcml"
version = "0.1.0"
description = "UFC Pre-fight Prediction Machine Learning Pipeline"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "UFC ML Team", email = "team@ufcml.com"}
]
keywords = ["ufc", "machine-learning", "prediction", "mma", "sports-analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.1.0",
    "xgboost>=1.6.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "matplotlib>=3.5.0",
    "shap>=0.41.0",
    "joblib>=1.2.0",
    "pydantic>=1.10.0",
    "optuna>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ufc-predictor"
Repository = "https://github.com/yourusername/ufc-predictor"
Documentation = "https://github.com/yourusername/ufc-predictor#readme"
Issues = "https://github.com/yourusername/ufc-predictor/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ufcml = ["*.yml", "*.yaml", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
